Deleting particle system instance object leads to crash #57616

Closed
opened 2018-11-04 22:12:11 +01:00 by Zachary · 7 comments

Blender Version
Date: 2018-11-2
Hash: 500ebf7348
Branch: blender 2.8

Short description of error
Crash after right clicking on object that has metaball particle system and metaball has been deleted.

Exact steps for others to reproduce the error
1: Select the metaball and delete it
2: Right click on cube

metaball_crash.blend

**Blender Version** Date: 2018-11-2 Hash: 500ebf7348b Branch: blender 2.8 **Short description of error** Crash after right clicking on object that has metaball particle system and metaball has been deleted. **Exact steps for others to reproduce the error** 1: Select the metaball and delete it 2: Right click on cube [metaball_crash.blend](https://archive.blender.org/developer/F5374833/metaball_crash.blend)
Author

Added subscriber: @AFWS

Added subscriber: @AFWS

#57940 was marked as duplicate of this issue

#57940 was marked as duplicate of this issue
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Sergey Sharybin was assigned by Philipp Oeser 2018-11-05 13:53:57 +01:00
Member

Can confirm the crash.
Assume this is related to #56352.

Doesnt neccessarily have to be a metaball, other object types also lead to crash.
Also this doesnt have to be a hair psys, emitter type will also lead to crash.

this is the backtrace from the reported file:

1   BKE_constraint_typeinfo_get                      constraint.c            4506 0x26ddd22 
2   BKE_constraints_solve                            constraint.c            4996 0x26deab7 
3   BKE_object_where_is_calc_time_ex                 object.c                2327 0x27fd58a 
4   BKE_object_where_is_calc_time                    object.c                2338 0x27fd626 
5   make_duplis_particle_system                      object_dupli.c          1056 0x280a9f8 
6   make_duplis_particles                            object_dupli.c          1137 0x280ae88 
7   object_duplilist                                 object_dupli.c          1197 0x280b067 
8   (anonymous namespace)::deg_iterator_objects_step depsgraph_query_iter.cc 208  0x2be3cd1 
9   DEG_iterator_objects_next                        depsgraph_query_iter.cc 284  0x2be3f96 
10  DEG_iterator_objects_begin                       depsgraph_query_iter.cc 251  0x2be3e71 
11  DRW_draw_render_loop_ex                          draw_manager.c          1466 0x24e85fc 
12  DRW_draw_view                                    draw_manager.c          1406 0x24e8302 
13  view3d_draw_view                                 view3d_draw.c           1303 0x1a812e0 
14  view3d_main_region_draw                          view3d_draw.c           1324 0x1a81390 
15  ED_region_do_draw                                area.c                  529  0x1f0919c 
16  wm_draw_window_offscreen                         wm_draw.c               546  0x1942bcf 
17  wm_draw_window                                   wm_draw.c               672  0x1943167 
18  wm_draw_update                                   wm_draw.c               826  0x194366e 
19  WM_main                                          wm.c                    418  0x19405f8

this is just deleting a monkey (set as instance object on the psys):

1  DEG::(anonymous namespace)::check_datablock_expanded           deg_eval_copy_on_write.cc 333  0x2c075d6 
2  DEG::(anonymous namespace)::foreach_libblock_validate_callback deg_eval_copy_on_write.cc 586  0x2c075d6 
3  BKE_library_foreach_ID_link                                    library_query.c           385  0x277924b 
4  DEG::deg_validate_copy_on_write_datablock                      deg_eval_copy_on_write.cc 1034 0x2c0815b 
5  (anonymous namespace)::deg_objects_dupli_iterator_next         depsgraph_query_iter.cc   152  0x2be3aba 
6  DEG_iterator_objects_next                                      depsgraph_query_iter.cc   263  0x2be3ebf 
7  DRW_draw_render_loop_ex                                        draw_manager.c            1466 0x24e864e 
8  DRW_draw_view                                                  draw_manager.c            1406 0x24e8302 
9  view3d_draw_view                                               view3d_draw.c             1303 0x1a812e0 
10 view3d_main_region_draw                                        view3d_draw.c             1324 0x1a81390 
11 ED_region_do_draw                                              area.c                    529  0x1f0919c 
12 wm_draw_window_offscreen                                       wm_draw.c                 546  0x1942bcf 
13 wm_draw_window                                                 wm_draw.c                 672  0x1943167 
14 wm_draw_update                                                 wm_draw.c                 826  0x194366e 
15 WM_main                                                        wm.c                      418  0x19405f8 
16 main                                                           creator.c                 525  0x193b3b1 

@Sergey : mind having a look?

Can confirm the crash. Assume this is related to #56352. Doesnt neccessarily have to be a metaball, other object types also lead to crash. Also this doesnt have to be a hair psys, emitter type will also lead to crash. this is the backtrace from the reported file: ``` 1 BKE_constraint_typeinfo_get constraint.c 4506 0x26ddd22 2 BKE_constraints_solve constraint.c 4996 0x26deab7 3 BKE_object_where_is_calc_time_ex object.c 2327 0x27fd58a 4 BKE_object_where_is_calc_time object.c 2338 0x27fd626 5 make_duplis_particle_system object_dupli.c 1056 0x280a9f8 6 make_duplis_particles object_dupli.c 1137 0x280ae88 7 object_duplilist object_dupli.c 1197 0x280b067 8 (anonymous namespace)::deg_iterator_objects_step depsgraph_query_iter.cc 208 0x2be3cd1 9 DEG_iterator_objects_next depsgraph_query_iter.cc 284 0x2be3f96 10 DEG_iterator_objects_begin depsgraph_query_iter.cc 251 0x2be3e71 11 DRW_draw_render_loop_ex draw_manager.c 1466 0x24e85fc 12 DRW_draw_view draw_manager.c 1406 0x24e8302 13 view3d_draw_view view3d_draw.c 1303 0x1a812e0 14 view3d_main_region_draw view3d_draw.c 1324 0x1a81390 15 ED_region_do_draw area.c 529 0x1f0919c 16 wm_draw_window_offscreen wm_draw.c 546 0x1942bcf 17 wm_draw_window wm_draw.c 672 0x1943167 18 wm_draw_update wm_draw.c 826 0x194366e 19 WM_main wm.c 418 0x19405f8 ``` this is just deleting a monkey (set as instance object on the psys): ``` 1 DEG::(anonymous namespace)::check_datablock_expanded deg_eval_copy_on_write.cc 333 0x2c075d6 2 DEG::(anonymous namespace)::foreach_libblock_validate_callback deg_eval_copy_on_write.cc 586 0x2c075d6 3 BKE_library_foreach_ID_link library_query.c 385 0x277924b 4 DEG::deg_validate_copy_on_write_datablock deg_eval_copy_on_write.cc 1034 0x2c0815b 5 (anonymous namespace)::deg_objects_dupli_iterator_next depsgraph_query_iter.cc 152 0x2be3aba 6 DEG_iterator_objects_next depsgraph_query_iter.cc 263 0x2be3ebf 7 DRW_draw_render_loop_ex draw_manager.c 1466 0x24e864e 8 DRW_draw_view draw_manager.c 1406 0x24e8302 9 view3d_draw_view view3d_draw.c 1303 0x1a812e0 10 view3d_main_region_draw view3d_draw.c 1324 0x1a81390 11 ED_region_do_draw area.c 529 0x1f0919c 12 wm_draw_window_offscreen wm_draw.c 546 0x1942bcf 13 wm_draw_window wm_draw.c 672 0x1943167 14 wm_draw_update wm_draw.c 826 0x194366e 15 WM_main wm.c 418 0x19405f8 16 main creator.c 525 0x193b3b1 ``` @Sergey : mind having a look?
Philipp Oeser changed title from Deleting metaball and selecting object with particle system to Deleting particle system instance object leads to crash 2018-11-05 13:54:49 +01:00
Member

Added subscriber: @piotr-14

Added subscriber: @piotr-14

This issue was referenced by fc830ce78f

This issue was referenced by fc830ce78f67ce3248b80f0e2a53cbc978f7040c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57616
No description provided.